Add Player Class

--- a/index.html
+++ b/index.html
@@ -4,4 +4,10 @@
     This is only the beggining :)
   </body>
   <script src="main.js"></script>
+  <script src="player.js"></script>
+
+  <script>
+    const player = new Player("John");
+    player.displayPlayerInfo();
+  </script>
 </html>
