--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
       height: 100px;
       width: 20px;
       background-color: black;
-      position: relative;
-      top: 0;
+      position: absolute;
+      top: 50vh;
       transition: top 0.2s ease; /* Adding smooth transition */
     }
   </style>
 
   <body>
-    This is only the beggining :)
+    <h1>Ping Pong vs AI</h1>
 
     <div class="brick"></div>
-    <div style="right: 10px; position: absolute" class="brick"></div>
+    <div style="right: 10px" class="brick"></div>
 
     <div style="margin-top: 400px; margin-left: 30%">
       <div style="display: inline">
