--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <script src="main.js"></script>
   <script src="player.js"></script>
-  <script src="logic.js"></script>
+  <script src="logic_buttons.js"></script>
 
   <script>
     const player = new Player("John");
@@ -10,30 +10,40 @@
   </script>
   <style>
     .brick {
-      height: 100px;
-      width: 20px;
+      height: 30%;
+      width: 3%;
       background-color: black;
       position: absolute;
-      top: 50vh;
-      transition: top 0.2s ease; /* Adding smooth transition */
+      top: 50%;
+      margin-top: -15%; /* Half of the element's height */
+      transition: top 0.05s ease; /* Adding smooth transition */
+    }
+
+    .gameCanvas {
+      width: 50vw;
+      height: 30vw;
+      border: 1px solid gray;
+      position: relative;
     }
   </style>
 
   <body>
     <h1>Ping Pong vs AI</h1>
 
-    <div class="brick"></div>
-    <div style="right: 10px" class="brick"></div>
+    <div class="gameCanvas">
+      <div class="brick"></div>
+      <div style="left: 97%" class="brick"></div>
+    </div>
 
-    <div style="margin-top: 400px; margin-left: 30%">
+    <!-- <div style="margin-top: 200px; margin-left: 30%">
       <div style="display: inline">
         <button onclick="moveUp(0)">Move Up</button>
-        <button onclick="moveDown(0)">Move Down</button>
+        <button onclick="debouncedMoveDown(0)">Move Down</button>
       </div>
       <div style="display: inline; margin-left: 100px">
         <button onclick="moveUp(1)">Move Up</button>
-        <button onclick="moveDown(1)">Move Down</button>
+        <button onclick="debouncedMoveDown(1)">Move Down</button>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
