--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
       border-bottom: 30px solid black;
       position: relative;
     }
+
+    .ball {
+      height: 35px;
+      width: 35px;
+      top: 50%;
+      left: 50%;
+      position: absolute;
+      background-color: black;
+      border-radius: 20px;
+      transition: top 0.3s ease; /* Adding smooth transition */
+    }
   </style>
 
   <body>
@@ -34,6 +45,7 @@
 
     <div class="gameCanvas">
       <div class="brick"></div>
+      <div id="ball" class="ball"></div>
       <div style="left: 97%" class="brick"></div>
     </div>
 
