Add diagonal movement

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       width: 50vw;
       height: 40vw;
       border: 1px solid gray;
-      border-top: 30px solid black;
-      border-bottom: 30px solid black;
+      /* border-top: 20px solid black;
+      border-bottom: 20px solid black; */
       position: relative;
     }
 
@@ -36,7 +36,8 @@
       position: absolute;
       background-color: black;
       border-radius: 20px;
-      transition: top 0.3s ease; /* Adding smooth transition */
+      transition: 0.3s ease; /* Adding smooth transition */
+      /* transition: left 0.3s ease; Adding smooth transition */
     }
   </style>
 
