--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div style="left: 97%" id="player2" class="brick"></div>
     </div>
 
-    <div style="margin-top: 200px; margin-left: 30%">
+    <!-- <div style="margin-top: 200px; margin-left: 30%">
       <div style="display: inline">
         <button onclick="moveUp(0)">Move Up</button>
         <button onclick="debouncedMoveDown(0)">Move Down</button>
@@ -59,6 +59,6 @@
         <button onclick="moveUp(1)">Move Up</button>
         <button onclick="debouncedMoveDown(1)">Move Down</button>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
