--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       left: 50%;
       position: absolute;
       background-color: black;
-      border-radius: 20px;
+      /* border-radius: 20px; */
       transition: 0.3s ease; /* Adding smooth transition */
       /* transition: left 0.3s ease; Adding smooth transition */
     }
