Attempt fix accuracy

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     .ball {
       height: 20px;
       width: 20px;
-      top: 50%;
+      top: 20%;
       left: 50%;
       position: absolute;
       background-color: black;
@@ -49,6 +49,12 @@
       <div id="ball" class="ball"></div>
       <div style="left: 99%" id="player2" class="brick"></div>
     </div>
+    <div id="ballTop">BallTop:</div>
+
+    <div id="ballTop2">BallTopCont:</div>
+
+    <br/>
+    <div id="playerTop">PlayerTop:</div>
 
     <!-- <div style="margin-top: 200px; margin-left: 30%">
       <div style="display: inline">
