--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background-color: black;
       position: absolute;
       top: 50%;
-      transform: translateY(-50%);
+      /* transform: translateY(-50%); */
       transition: top 0.3s ease; /* Adding smooth transition */
     }
 
@@ -42,7 +42,7 @@
   </style>
 
   <body>
-    <h1>Ping Pong vs AI</h1>
+    <!-- <h1>Ping Pong vs AI</h1> -->
 
     <div class="gameCanvas">
       <div id="player1" class="brick"></div>
