Finally fix move up/down player

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   <body>
     <!-- <h1>Ping Pong vs AI</h1> -->
 
-    <div class="gameCanvas">
+    <div class="gameCanvas" id="gameCanvas">
       <div id="player1" class="brick"></div>
       <div id="ball" class="ball"></div>
       <div style="left: 99%" id="player2" class="brick"></div>
     </div>
-    
+
     <div id="ballTop">BallTop:</div>
 
     <div id="ballTop2">BallTopCont:</div>
