--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </style>
 
   <body>
-    <!-- <h1>Ping Pong vs AI</h1> -->
+    <h1>Ping Pong vs AI</h1>
 
     <div class="gameCanvas" id="gameCanvas">
       <div id="player1" class="brick"></div>
