Add points first version finished

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
       font-size: large;
       width: auto;
     }
+
+    #p1-points {
+      font-size: xx-large;
+    }
+
+    #p2-points {
+      font-size: xx-large;
+    }
   </style>
 
   <body>
@@ -67,11 +75,11 @@
 
     <div class="score-card">
       <div class="p1-score">
-        Player 1: <b><span id="score-val-1">0</span></b>
+        Player 1: <b><span id="p1-points">0</span></b>
       </div>
 
       <div class="p2-score">
-        Player 2: <b><span id="score-val-1">0</span></b>
+        Player 2: <b><span id="p2-points">0</span></b>
       </div>
     </div>
 
