Add point limit

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <script src="main.js"></script>
   <script src="player.js"></script>
-  <script src="logic_buttons.js"></script>
+  <script src="logic_keyboards.js"></script>
 
   <script>
     const player = new Player("John");
@@ -82,18 +82,5 @@
         Player 2: <b><span id="p2-points">0</span></b>
       </div>
     </div>
-
-    <br />
-
-    <!-- <div style="margin-top: 200px; margin-left: 30%">
-      <div style="display: inline">
-        <button onclick="moveUp(0)">Move Up</button>
-        <button onclick="debouncedMoveDown(0)">Move Down</button>
-      </div>
-      <div style="display: inline; margin-left: 100px">
-        <button onclick="moveUp(1)">Move Up</button>
-        <button onclick="debouncedMoveDown(1)">Move Down</button>
-      </div>
-    </div> -->
   </body>
 </html>
