--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
 
     #p1-points {
       font-size: xx-large;
+      color: red;
     }
 
     #p2-points {
       font-size: xx-large;
+      color: green;
     }
   </style>
 
