--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <script src="main.js"></script>
-  <script src="player.js"></script>
+
+  <script src="DOMObject.js"></script>
   <script src="logic_keyboards.js"></script>
+  <script src="player.js"></script>
+  <script src="ball.js"></script>
+  <script src="engine.js"></script>
 
   <script>
     const player = new Player("John");
