--- a/index.html
+++ b/index.html
@@ -90,11 +90,13 @@
 
       <div class="score-card">
         <div class="p1-score">
-          Player 1: <b><span id="p1-points">0</span></b>
+          <span id="p1-name">0</span>:
+          <b><span id="p1-points"> 0</span></b>
         </div>
 
         <div class="p2-score">
-          Player 2: <b><span id="p2-points">0</span></b>
+          <span id="p2-name"></span>:
+          <b><span id="p2-points"> 0</span></b>
         </div>
       </div>
     </div>
