Add increase speed button

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
           <b><span id="p2-points"> 0</span></b>
         </div>
       </div>
+      <div>
+        Ball Speed:
+        <button onclick="increaseSpeed()">Increase</button>
+
+        <button onclick="decreaseSpeed()">Decrease</button>
+      </div>
     </div>
   </body>
 </html>
