--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div>
-        Ball Speed:
+        Ball Speed: <b><span id="ball-speed"></span></b>
         <button onclick="increaseSpeed()">Increase</button>
 
         <button onclick="decreaseSpeed()">Decrease</button>
