--- a/index.html
+++ b/index.html
@@ -102,8 +102,13 @@
       <div>
         Ball Speed: <b><span id="ball-speed"></span></b>
         <button onclick="increaseSpeed()">Increase</button>
-
         <button onclick="decreaseSpeed()">Decrease</button>
+      </div>
+      <br />
+      <div>
+        Player Speed: <b><span id="player-speed"></span></b>
+        <button onclick="increasePlayerSpeed()">Increase</button>
+        <button onclick="decreasePlayerSpeed()">Decrease</button>
       </div>
     </div>
   </body>
