--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="ball.js"></script>
   <script src="engine.js"></script>
 
+  <script></script>
   <style>
     body {
       text-align: center;
@@ -76,23 +77,12 @@
 
   <body>
     <div class="container">
-      <h1>Ping Pong vs AI</h1>
-      <div>
-        Ball Speed: <b><span id="ball-speed"></span></b>
-        <button onclick="increaseSpeed()">Increase</button>
-        <button onclick="decreaseSpeed()">Decrease</button>
-      </div>
-      <div>
-        Player Speed: <b><span id="player-speed"></span></b>
-        <button onclick="increasePlayerSpeed()">Increase</button>
-        <button onclick="decreasePlayerSpeed()">Decrease</button>
-      </div>
       <div class="gameCanvas" id="gameCanvas">
         <div id="player1" class="brick"></div>
         <div id="ball" class="ball"></div>
         <div style="left: 99%" id="player2" class="brick"></div>
       </div>
-
+      <h1>Ping Pong vs AI</h1>
       <div class="score-card">
         <div class="p1-score">
           <span id="p1-name">0</span>:
@@ -103,6 +93,16 @@
           <span id="p2-name"></span>:
           <b><span id="p2-points"> 0</span></b>
         </div>
+      </div>
+      <div>
+        Ball Speed: <b><span id="ball-speed"></span></b>
+        <button onclick="increaseSpeed()">Increase</button>
+        <button onclick="decreaseSpeed()">Decrease</button>
+      </div>
+      <div>
+        Player Speed: <b><span id="player-speed"></span></b>
+        <button onclick="increasePlayerSpeed()">Increase</button>
+        <button onclick="decreasePlayerSpeed()">Decrease</button>
       </div>
     </div>
   </body>
