Show current level

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
         </div>
       </div>
       <div>
+        <h2>Level</h2>
+        <span id="level-number"></span>
+      </div>
+      <div>
         Ball Speed: <b><span id="ball-speed"></span></b>
         <button onclick="increaseSpeed()">Increase</button>
         <button onclick="decreaseSpeed()">Decrease</button>
