Style level box

--- a/index.html
+++ b/index.html
@@ -95,8 +95,11 @@
         </div>
       </div>
       <div>
-        <h2>Level</h2>
-        <span id="level-number"></span>
+        <span style="font-size: 22px; font-weight: bold">Level: </span>
+        <span
+          style="font-size: 24px; font-weight: bold; color: blue"
+          id="level-number"
+        ></span>
       </div>
       <div>
         Ball Speed: <b><span id="ball-speed"></span></b>
